feat: 레이아웃 및 라우트 내 네비게이션 명칭 수정

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -74,6 +74,8 @@
     "logs": "Logs",
     "admins": "Admin Management",
     "content": "Content Management",
+    "weather": "Weather Management",
+    "tourist_attractions": "Tourist Attractions",
     "open_menu": "Open menu",
     "close_menu": "Close menu",
     "admin_panel": "Admin Panel",
