--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -28,367 +28,47 @@
     "list": "목록",
     "total": "전체",
     "page": "페이지",
-    "previous_page": "이전 페이지로 이동",
-    "next_page": "다음 페이지로 이동",
-    "more_pages": "더 많은 페이지",
-    "items": "항목",
-    "select": "선택",
     "all": "전체",
     "none": "없음",
     "unknown": "알 수 없음",
     "required": "필수",
     "optional": "선택사항",
-    "no_items": "항목이 없습니다",
     "name": "이름",
     "title": "제목",
     "description": "설명",
     "content": "내용",
     "date": "날짜",
     "time": "시간",
-    "created_at": "생성일",
-    "updated_at": "수정일",
-    "status": "상태",
-    "type": "유형",
-    "category": "카테고리",
-    "id": "ID",
-    "email": "이메일",
-    "password": "비밀번호",
-    "username": "사용자명",
-    "phone": "전화번호",
-    "address": "주소",
-    "settings": "설정",
-    "dashboard": "대시보드",
-    "profile": "프로필",
-    "logout": "로그아웃",
-    "login": "로그인"
+    "status": "상태"
   },
-  
   "navigation": {
     "dashboard": "대시보드",
-    "users": "사용자 관리",
-    "travels": "여행 관리", 
-    "system": "시스템 모니터링",
-    "settings": "설정",
-    "analytics": "분석",
-    "reports": "리포트",
-    "logs": "로그",
+    "users": "사용자 관리", 
     "admins": "관리자 관리",
     "content": "콘텐츠 관리",
     "weather": "날씨 관리",
     "tourist_attractions": "관광지 관리",
-    "open_menu": "메뉴 열기",
-    "close_menu": "메뉴 닫기",
-    "admin_panel": "관리자 패널",
-    "logout": "로그아웃"
+    "batch": "배치 관리"
   },
-  
-  "dashboard": {
-    "title": "관리자 대시보드",
-    "description": "Weather Flick 관리 시스템",
-    "overview": "개요",
-    "statistics": "통계",
-    "recent_activities": "최근 활동",
-    "quick_actions": "빠른 작업",
-    "system_status": "시스템 상태",
-    "total_users": "전체 사용자",
-    "active_users": "활성 사용자",
-    "total_travels": "전체 여행",
-    "completed_travels": "완료된 여행"
-  },
-  
-  "users": {
-    "title": "사용자 관리",
-    "list": "사용자 목록",
-    "detail": "사용자 상세",
-    "create": "사용자 생성",
-    "edit": "사용자 수정",
-    "delete": "사용자 삭제",
-    "search_placeholder": "사용자 검색...",
-    "filter_by_status": "상태로 필터",
-    "filter_by_role": "역할로 필터",
-    "user_id": "사용자 ID",
-    "display_name": "표시 이름",
-    "email": "이메일",
-    "phone": "전화번호",
+  "batch": {
+    "title": "배치 관리",
+    "description": "배치 작업을 수동으로 실행하고 모니터링합니다",
+    "execute_job": "배치 작업 실행",
+    "select_and_execute": "실행할 배치 작업을 선택하고 즉시 실행합니다",
+    "select_job": "작업을 선택하세요",
+    "execute": "실행",
+    "executing": "실행 중...",
+    "execution_failed": "배치 작업 실행에 실패했습니다",
+    "execution_error": "배치 작업 실행 중 오류가 발생했습니다",
+    "status_fetch_failed": "배치 상태 조회에 실패했습니다",
+    "status_error": "배치 상태 조회 중 오류가 발생했습니다",
+    "execution_history": "실행 히스토리",
+    "recent_executions": "최근 배치 작업 실행 기록입니다",
+    "no_history": "실행 히스토리가 없습니다",
+    "job_name": "작업명",
     "status": "상태",
-    "role": "역할",
-    "created_at": "가입일",
-    "last_login": "마지막 로그인",
-    "active": "활성",
-    "inactive": "비활성",
-    "suspended": "정지",
-    "admin": "관리자",
-    "user": "일반 사용자",
-    "premium": "프리미엄",
-    "no_users_found": "사용자를 찾을 수 없습니다.",
-    "user_created": "사용자가 생성되었습니다.",
-    "user_updated": "사용자가 수정되었습니다.",
-    "user_deleted": "사용자가 삭제되었습니다.",
-    "delete_confirmation": "정말로 이 사용자를 삭제하시겠습니까?",
-    "bulk_actions": "일괄 작업",
-    "export": "내보내기",
-    "import": "가져오기"
-  },
-  
-  "admins": {
-    "title": "관리자 관리",
-    "list": "관리자 목록",
-    "search_placeholder": "관리자 검색...",
-    "add_admin": "관리자 추가",
-    "edit_admin": "관리자 수정",
-    "delete_admin": "관리자 삭제"
-  },
-  
-  "travels": {
-    "title": "여행 관리",
-    "list": "여행 목록",
-    "detail": "여행 상세",
-    "create": "여행 생성",
-    "edit": "여행 수정",
-    "delete": "여행 삭제",
-    "search_placeholder": "여행 검색...",
-    "filter_by_status": "상태로 필터",
-    "filter_by_region": "지역으로 필터",
-    "travel_id": "여행 ID",
-    "travel_name": "여행명",
-    "destination": "목적지",
-    "user": "사용자",
-    "start_date": "시작일",
-    "end_date": "종료일",
-    "status": "상태",
-    "participants": "참가자",
-    "budget": "예산",
-    "planned": "계획됨",
-    "ongoing": "진행 중",
-    "completed": "완료됨",
-    "cancelled": "취소됨",
-    "no_travels_found": "여행을 찾을 수 없습니다.",
-    "travel_created": "여행이 생성되었습니다.",
-    "travel_updated": "여행이 수정되었습니다.",
-    "travel_deleted": "여행이 삭제되었습니다.",
-    "delete_confirmation": "정말로 이 여행을 삭제하시겠습니까?",
-    "itinerary": "일정",
-    "weather_info": "날씨 정보",
-    "recommendations": "추천 장소"
-  },
-  
-  "content": {
-    "title": "콘텐츠 관리",
-    "course_name": "코스명",
-    "region_code": "지역코드",
-    "festival_name": "축제명",
-    "start_date": "시작일 (YYYY-MM-DD)",
-    "end_date": "종료일 (YYYY-MM-DD)",
-    "location": "장소",
-    "phone": "전화번호",
-    "course_name_placeholder": "코스명을 입력하세요",
-    "region_code_placeholder": "지역코드를 입력하세요",
-    "festival_name_placeholder": "축제명을 입력하세요",
-    "location_placeholder": "장소를 입력하세요",
-    "phone_placeholder": "전화번호를 입력하세요"
-  },
-  
-  "system": {
-    "title": "시스템 모니터링",
-    "description": "시스템 상태 및 로그 모니터링 대시보드",
-    "status": "상태",
-    "uptime": "가동 시간",
-    "last_check": "마지막 체크",
-    "response_time": "응답 시간",
-    "database": "데이터베이스",
-    "external_apis": "외부 API",
-    "weather_api": "날씨 API",
-    "tourism_api": "관광 API",
-    "google_maps": "지도 API",
-    "system_resources": "시스템 리소스",
-    "cpu_usage": "CPU 사용률",
-    "memory_usage": "메모리 사용률",
-    "disk_usage": "디스크 사용률",
-    "network": "네트워크",
-    "logs": "시스템 로그",
-    "log_level": "로그 레벨",
-    "log_source": "소스",
-    "log_message": "메시지",
-    "log_time": "시간",
-    "filter_logs": "로그 필터",
-    "search_logs": "로그 검색",
-    "auto_refresh": "자동 새로고침",
-    "manual_refresh": "수동 새로고침",
-    "refresh_interval": "새로고침 간격",
-    "healthy": "정상",
-    "degraded": "성능 저하",
-    "unhealthy": "장애",
-    "unknown": "알 수 없음",
-    "up": "정상",
-    "down": "중단",
-    "maintenance": "점검 중",
-    "partial": "일부 장애",
-    "critical": "심각",
-    "warning": "경고",
-    "info": "정보",
-    "success": "성공",
-    "monitoring_active": "모니터링 활성",
-    "monitoring_inactive": "모니터링 비활성",
-    "last_updated": "마지막 업데이트",
-    "system_overview": "시스템 개요",
-    "detailed_status": "상세 상태",
-    "performance_metrics": "성능 지표",
-    "no_logs_found": "조건에 맞는 로그가 없습니다.",
-    "loading_logs": "로그를 불러오는 중...",
-    "loading_status": "시스템 상태 정보를 불러오는 중...",
-    "status_error": "시스템 상태를 불러오지 못했습니다.",
-    "log_error": "로그를 불러오지 못했습니다.",
-    "service_and_database": "서비스 & 데이터베이스",
-    "service": "서비스",
-    "continuous_uptime": "시스템 연속 가동 시간",
-    "auto_update_every": "{{interval}}초마다 자동 업데이트",
-    "component_status": "각 컴포넌트별 상태 및 성능 지표",
-    "system_event_logs": "시스템 이벤트 및 오류 로그 기록"
-  },
-  
-  "settings": {
-    "title": "설정",
-    "general": "일반 설정",
-    "security": "보안 설정",
-    "notifications": "알림 설정",
-    "system": "시스템 설정",
-    "appearance": "화면 설정",
-    "language": "언어",
-    "theme": "테마",
-    "timezone": "시간대",
-    "date_format": "날짜 형식",
-    "time_format": "시간 형식",
-    "auto_save": "자동 저장",
-    "backup": "백업",
-    "restore": "복원",
-    "export_data": "데이터 내보내기",
-    "import_data": "데이터 가져오기",
-    "api_keys": "API 키",
-    "integrations": "연동 설정",
-    "maintenance_mode": "점검 모드",
-    "system_info": "시스템 정보",
-    "version": "버전",
-    "build": "빌드",
-    "environment": "환경",
-    "database_info": "데이터베이스 정보",
-    "server_info": "서버 정보"
-  },
-  
-  "analytics": {
-    "title": "분석",
-    "overview": "분석 개요",
-    "user_analytics": "사용자 분석",
-    "travel_analytics": "여행 분석",
-    "system_analytics": "시스템 분석",
-    "reports": "리포트",
-    "charts": "차트",
-    "metrics": "지표",
-    "trends": "트렌드",
-    "performance": "성능",
-    "usage": "사용량",
-    "growth": "성장률",
-    "retention": "유지율",
-    "conversion": "전환율",
-    "revenue": "수익",
-    "costs": "비용",
-    "roi": "ROI",
-    "kpi": "KPI"
-  },
-  
-  "validation": {
-    "required": "이 필드는 필수입니다.",
-    "email_invalid": "유효하지 않은 이메일 주소입니다.",
-    "password_min_length": "비밀번호는 최소 {{min}}자 이상이어야 합니다.",
-    "password_max_length": "비밀번호는 최대 {{max}}자까지 입력 가능합니다.",
-    "phone_invalid": "유효하지 않은 전화번호입니다.",
-    "url_invalid": "유효하지 않은 URL입니다.",
-    "number_invalid": "유효하지 않은 숫자입니다.",
-    "min_length": "최소 {{min}}자 이상 입력해주세요.",
-    "max_length": "최대 {{max}}자까지 입력 가능합니다.",
-    "min_value": "최소값은 {{min}}입니다.",
-    "max_value": "최대값은 {{max}}입니다.",
-    "date_invalid": "유효하지 않은 날짜입니다.",
-    "future_date": "미래 날짜를 선택해주세요.",
-    "past_date": "과거 날짜를 선택해주세요.",
-    "confirm_password": "비밀번호가 일치하지 않습니다."
-  },
-  
-  "messages": {
-    "save_success": "성공적으로 저장되었습니다.",
-    "save_error": "저장 중 오류가 발생했습니다.",
-    "delete_success": "성공적으로 삭제되었습니다.",
-    "delete_error": "삭제 중 오류가 발생했습니다.",
-    "update_success": "성공적으로 업데이트되었습니다.",
-    "update_error": "업데이트 중 오류가 발생했습니다.",
-    "create_success": "성공적으로 생성되었습니다.",
-    "create_error": "생성 중 오류가 발생했습니다.",
-    "load_error": "데이터를 불러오는 중 오류가 발생했습니다.",
-    "network_error": "네트워크 오류가 발생했습니다.",
-    "unauthorized": "권한이 없습니다.",
-    "forbidden": "접근이 금지되었습니다.",
-    "not_found": "요청한 데이터를 찾을 수 없습니다.",
-    "server_error": "서버 오류가 발생했습니다.",
-    "confirm_action": "이 작업을 계속하시겠습니까?",
-    "unsaved_changes": "저장되지 않은 변경사항이 있습니다.",
-    "session_expired": "세션이 만료되었습니다. 다시 로그인해주세요.",
-    "maintenance": "시스템 점검 중입니다.",
-    "connection_lost": "연결이 끊어졌습니다.",
-    "connection_restored": "연결이 복구되었습니다."
-  },
-  
-  "time": {
-    "just_now": "방금 전",
-    "minutes_ago": "{{count}}분 전",
-    "hours_ago": "{{count}}시간 전", 
-    "days_ago": "{{count}}일 전",
-    "weeks_ago": "{{count}}주 전",
-    "months_ago": "{{count}}개월 전",
-    "years_ago": "{{count}}년 전",
-    "in_minutes": "{{count}}분 후",
-    "in_hours": "{{count}}시간 후",
-    "in_days": "{{count}}일 후",
-    "in_weeks": "{{count}}주 후",
-    "in_months": "{{count}}개월 후",
-    "in_years": "{{count}}년 후",
-    "today": "오늘",
-    "yesterday": "어제",
-    "tomorrow": "내일",
-    "this_week": "이번 주",
-    "last_week": "지난 주",
-    "next_week": "다음 주",
-    "this_month": "이번 달",
-    "last_month": "지난 달",
-    "next_month": "다음 달",
-    "this_year": "올해",
-    "last_year": "작년",
-    "next_year": "내년"
-  },
-  
-  "pagination": {
-    "previous": "이전",
-    "next": "다음",
-    "first": "처음",
-    "last": "마지막",
-    "page": "페이지",
-    "of": "/",
-    "showing": "전체 {{total}}개 중 {{start}}-{{end}}개 표시",
-    "per_page": "페이지당 항목 수",
-    "go_to_page": "페이지로 이동",
-    "no_data": "데이터가 없습니다.",
-    "showing_items": "{{start}}-{{end}} / {{total}}개 항목",
-    "page_of_total": "{{current}} / {{total}} 페이지",
-    "total_items": "총 {{count}}개 항목",
-    "items_per_page": "페이지당 항목"
-  },
-  
-  "error": {
-    "unexpected_error_title": "예상치 못한 오류가 발생했습니다",
-    "unexpected_error_description": "죄송합니다. 애플리케이션에 문제가 발생했습니다. 아래 버튼을 통해 다시 시도해보세요.",
-    "error_id": "오류 ID",
-    "try_again": "다시 시도",
-    "reload_page": "페이지 새로고침",
-    "go_home": "홈으로 이동",
-    "report_error": "오류 신고",
-    "technical_details": "기술적 세부사항"
+    "start_time": "시작 시간",
+    "duration": "소요 시간",
+    "message": "메시지"
   }
 }
