feat: 대시보드 헤더 및 시스템 상태 카드 업데이트
- 대시보드 헤더에서 다국어 지원을 위한 useTranslation 훅 제거 및 한국어로 제목과 설명 추가
- 시스템 상태 카드에서 API 응답 시간 표시 제거하여 UI 간소화
- 한국어 로케일 파일에 대시보드 제목 및 설명 추가

--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -50,6 +50,10 @@
     "tourist_attractions": "관광지 관리",
     "batch": "배치 관리"
   },
+  "dashboard": {
+    "title": "대시보드",
+    "description": "Weather Flick 관리 시스템의 전체 현황을 확인하세요"
+  },
   "batch": {
     "title": "배치 관리",
     "description": "배치 작업을 수동으로 실행하고 모니터링합니다",
